--- a/src/Component/Service/Service.css
+++ b/src/Component/Service/Service.css
@@ -2,12 +2,12 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 3rem;
-        margin-top: 6rem;
+        /* margin-top: 6rem; */
     }
     
     #Service {
         height: 70vh;
-        margin-top: 0;
+        /* margin-top: 200px; */
     }
     
     .services {
