--- a/src/Component/About/About.css
+++ b/src/Component/About/About.css
@@ -5,8 +5,9 @@
 }
 
 #About {
-    height: 90vh;
+    height: auto;
     transition: var(--transitions);
+    margin-bottom: 40px;
 }
 
 .about_me {
