--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: var(--color-primary);
+    background-color: rgb(42 42 67);
     padding: 3rem 0;
     text-align: center;
     font-size: .9rem;
@@ -9,7 +9,7 @@ footer {
 #Footer {}
 
 footer a {
-    color: var(--color-bg);
+    color: var(--color-white);
 }
 
 .footer_logo {
@@ -51,5 +51,5 @@ footer a {
 
 .footer_copyright {
     margin-bottom: 4rem;
-    color: var(--color-bg);
+    color: var(--color-white);
 }
